# RAG_knowledge_assistant_MLO_project

./: .gitignore  README.md  main.py  pyproject.toml
artifacts/faiss/: config.json  index.faiss  meta.jsonl
data/raw/: MANIFEST.json  MANIFEST.txt  README.md
data/raw/code/: 01_utils_spark_session.py  02_dataframe_basics.py  03_joins_and_aggs.py  04_graphframes_build_graph.py  05_graphframes_bfs.py  06_graphframes_pagerank.py  07_graphframes_connected_components.py  08_graphframes_motifs_triangles.py  09_personalized_pagerank_notes_and_skeleton.py  09_triangle_count_dataframe_only.py  10_personalized_pagerank_reco.py  10_similarity_jaccard_cosine_df.py
data/raw/meta/: 00_topic_map.md  01_study_plan.md  02_exam_strategy_closed_book.md  03_glossary.md  04_modes_and_outputs.md  05_fallback_policy.md  topic_map.json
data/raw/notes/: 01_exam_syllabus.md  02_spark_core_rdd.md  03_spark_dataframes.md  04_graph_theory_basics.md  05_graph_algorithms_math.md  06_graphframes_api.md  07_graph_dataframe_algorithms.md  08_recommendation_ppr_workflow.md  09_exam_question_patterns.md  10_revision_strategy.md  11_dataframe_optimization_and_performance.md  12_graph_algorithms_exam_cheatsheet.md  13_common_exam_pitfalls.md
data/raw/qbank/: coding_tasks.json  math_exercises.json  mcq.json  short_answer.json
data/raw/sources/: ESILV_Dataframes_Graphs_2025_ETU.ipynb  GraphFrames_class_notebook_2026.ipynb  (+1 more)
scripts/: build_index.py  ingest.py  serve.py
src/rag_assistant/: config.py  schemas.py
src/rag_knowledge_assistant_mlo_project.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+9 files in other folders)
